--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 en/JavaScript/1.Two Sum.js
 en/JavaScript/2.Add Two Numbers.js
+**/out/**
 node_modules/algm/LICENSE
 node_modules/algm/package.json
 node_modules/algm/README.md
