--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 en/JavaScript/1.Two Sum.js
 en/JavaScript/2.Add Two Numbers.js
 **/out/**
+**/__pycache__/**
+*.pyc
 node_modules/algm/LICENSE
 node_modules/algm/package.json
 node_modules/algm/README.md
